Fix the position of Docs.menu to hanlde the Russian layout break.

--- a/css/docs-app.css
+++ b/css/docs-app.css
@@ -151,10 +151,11 @@
 }
 
 #docs-app .docs-menu-container {
-  width: 800px;
   -webkit-flex: none;
-  display: -webkit-flex;
   -webkit-justify-content: flex-start;
+  display: -webkit-flex;
+  margin-top: 4px;
+  width: 800px;
 }
 
 #docs-app .docs-menu {
